@@ -1,4 +1,5 @@
 v0.6.0, 2017-03-?? -- ???
+ * removed deprecated INPUT, OUTPUT attributes from JarStep
  * removed deprecated filesystem methods:
    * path_exists()
    * path_join()
